# degree-sync

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_screenshot.py
src/config/: settings.py
src/scraper/: ava_client.py  main.py
src/scraper/core/: browser.py
src/scraper/providers/uniasselvi/: auth.py  client.py
tests/: conftest.py  test_uniasselvi_client.py
tests/core/: __init__.py  test_browser.py
tests/providers/: __init__.py
tests/providers/uniasselvi/: __init__.py  test_client.py  test_e2e.py
